--- a/educacao.html
+++ b/educacao.html
@@ -50,7 +50,7 @@
 					Os videogames, muitas vezes temidos por pais preocupados com o desempenho escolar de seus filhos, têm se mostrado como uma valiosa ferramenta de desenvolvimento. Longe de serem simples passatempos, os jogos eletrônicos têm o potencial de aprimorar habilidades cognitivas, promover o trabalho em equipe e até mesmo >>
 				</p>
 				<footer class="article-info">
-					<i>Por Prof. Me. Danilo A. Luz Jr.</i>
+					<i>Por Prof. Me. Danilo A. Luz Jr.  17/08/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -69,7 +69,7 @@
 						A sociedade contemporânea enfrenta mudanças profundas nos âmbitos político, econômico e social, onde a informação e a comunicação desempenham papéis cruciais. O avanço das Tecnologias de Informação e Comunicação (TIC) impulsionou inovações em diversos setores, impactando o trabalho e, consequentemente, a educação. Diante disso, é imperativo repensar currículos e programas escolares para desenvolver habilidades cognitivas >>
 					</p>
 					<footer class="article-info">
-						<i>Por Kiko Campos</i>
+						<i>Por Kiko Campos  27/08/2023</i>
 					</footer>
 					</div>
 				</a>
@@ -88,7 +88,7 @@
 						No turbilhão das redes sociais e no cenário corporativo, as diferenças entre líderes e chefes alimentam debates fervorosos. A verdade é que essas distinções não são apenas semânticas, mas delineiam abismos de ações. A metamorfose geracional tem acelerado a busca por coerência nas atitudes de liderança, rejeitando o ultrapassado lema do "faça o que eu digo, não o que eu faço" >>
 					</p>
 					<footer class="article-info">
-						<i>Por Kiko Campos</i>
+						<i>Por Kiko Campos  23/08/2023</i>
 					</footer>
 					</div>
 				</a>
@@ -107,7 +107,7 @@
 						A rápida evolução das inovações tecnológicas está promovendo uma revolução em diversos setores da sociedade, incluindo a educação. No entanto, essa transformação não é tarefa simples. A escola, representada por professores, gestores e coordenadores pedagógicos, enfrenta o desafio de integrar a cultura digital ao currículo, criando um ambiente de ensino dinâmico e interativo >>
 					</p>
 					<footer class="article-info">
-						<i>Por Valéria Maria A. S. Pontes</i>
+						<i>Por Valéria Maria A. S. Pontes  19/08/2023</i>
 					</footer>
 					</div>
 				</a>
@@ -126,7 +126,7 @@
 					A Agência Espacial Europeia (ESA) iniciou, na passada segunda-feira, as manobras para a reentrada na Terra do satélite Aeolus, que estudou os ventos do planeta com tecnologia portuguesa, mas que tem “morte” anunciada hoje, quando caírem os destroços no Atlântico. >>
 				</p>
 				<footer class="article-info">
-					<i>Por Andre Martins</i>
+					<i>Por Andre Martins  31/08/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -146,7 +146,7 @@
         <p class="texto">Os debates sobre inteligência artificial (IA) estão em alta, e na educação não poderia ser diferente. É um misto de dúvidas, busca pelo conhecimento das ferramentas e medo de ficar para trás e não acompanhar os avanços da tecnologia. Alguns estudos mostram que a IA será uma forte aliada para a transformação do ensino e as empresas já apresentam lançamentos de recursos que prometem colaborar com o trabalho dos professores e com o aprendizado dos alunos. >>
 					</p>
 					<footer class="article-info">
-						<i>Por Claudia Vieira Levinsohn</i>
+						<i>Por Claudia Vieira Levinsohn  03/08/2023</i>
 					</footer>
 					</div>
 				</a>
