--- a/index.html
+++ b/index.html
@@ -39,6 +39,57 @@
 
 		<div class="articles-container">
 
+			<a class="article" href="/paginas/saude003.html">
+				<figure class="article-image">
+				<img src="/images/saude3-mini-banner.png">
+				</figure>
+				<div class="article-body">
+				<h2 class="article-title">
+					Inteligência Artificial na Detecção de Câncer de Mama: Estudo Aponta para Avanços Promissores
+				</h2>
+				<p class="article-content">
+					Avanços na área médica estão trazendo resultados promissores no campo da detecção precoce do câncer de mama, graças à integração da inteligência artificial (IA). Um estudo realizado na Suécia trouxe à tona dados que indicam a viabilidade e a segurança do uso da IA para auxiliar radiologistas na análise de mamografias, representando um avanço significativo no campo da medicina diagnóstica. >>
+				</p>
+				<footer class="article-info">
+					<i>Por Kristina Lång, PhD. 14/08/2023</i>
+				</footer>
+				</div>
+			</a>
+
+			<a class="article" href="/paginas/revolut.html">
+				<figure class="article-image">
+				<img src="/images/technologia4-mini-banner.png">
+				</figure>
+				<div class="article-body">
+				<h2 class="article-title">
+					A Revolut, uma das fintechs mais populares na Europa, chegou ao Brasil
+				</h2>
+				<p class="article-content">
+					Conhecida pelos brasileiros como a Nubank Europeia, a Revolut é uma das fintechs mais populares na Europa, chegou ao Brasil com sua conta digital, oferecendo aos brasileiros a facilidade de converter automaticamente dinheiro em até 27 moedas, incluindo dólar e euro, a qualquer momento do dia e com compatibilidade com Pix. Além disso, a empresa também disponibiliza um cartão pré-pago e recursos para viagens em grupo, permitindo a divisão automática de gastos entre os usuários. >>
+				</p>
+				<footer class="article-info">
+					<i>Por Por Beatriz Rocha 06/08/2023</i>
+				</footer>
+				</div>
+			</a>
+
+			<a class="article" href="/paginas/tecnologia003.html">
+				<figure class="article-image">
+				<img src="/images/technologia5-mini-banner.png">
+				</figure>
+				<div class="article-body">
+				<h2 class="article-title">
+					'Superaplicativos' vão reunir todos os bancos do cliente em um único local, diz presidente do BC
+				</h2>
+				<p class="article-content">
+					O mercado financeiro está trabalhando em uma inovadora iniciativa conhecida como "agregadores financeiros" ou "superaplicativos", conforme anunciado pelo presidente do Banco Central (BC), Roberto Campos Neto. Esses aplicativos têm como objetivo unificar as informações financeiras dispersas em diversos bancos, proporcionando uma experiência mais integrada aos usuários. >>
+				</p>
+				<footer class="article-info">
+					<i>Por Alexandro Martello 14/08/2023</i>
+				</footer>
+				</div>
+			</a>
+
 			<a class="article" href="/paginas/saude001.html">
 				<figure class="article-image">
 				<img src="/images/saude1-mini-banner.jpg">
@@ -51,7 +102,7 @@
 					O treinamento de força tem forte associação com a prevenção de mortalidade por todas as causas, considerando que o aumento da massa muscular e a força estimulam a resposta metabólica celular, em especial as condições de controle anti-inflamatório e imunológico. >>
 				</p>
 				<footer class="article-info">
-					<i>Por Dr. Aylton Figueira Jr.</i>
+					<i>Por Dr. Aylton Figueira Jr. 08/08/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -68,7 +119,7 @@
 					A Agência Espacial Europeia (ESA) iniciou, na passada segunda-feira, as manobras para a reentrada na Terra do satélite Aeolus, que estudou os ventos do planeta com tecnologia portuguesa, mas que tem “morte” anunciada hoje, quando caírem os destroços no Atlântico. >>
 				</p>
 				<footer class="article-info">
-					<i>Por Francisco Laranjeira.</i>
+					<i>Por Francisco Laranjeira. 29/07/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -85,7 +136,7 @@
 					Para quem busca novas formas para parar de fumar, os resultados positivos da terceira e última fase de testes de um novo medicamento podem representar um novo caminho. Nos testes, o remédio fitoterápico citisiniclina, também conhecido cistina, da Achieve >>
 				</p>
 				<footer class="article-info">
-					<i>Por Fidel Forato.</i>
+					<i>Por Fidel Forato. 01/08/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -102,7 +153,7 @@
 					Opções de aprofundamento caem de 12 para três a partir do próximo ano; modelo vem para as escolas estaduais, mas não para as particulares. >>
 				</p>
 				<footer class="article-info">
-					<i>Por Andre Martins.</i>
+					<i>Por Andre Martins. 31/07/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -119,7 +170,7 @@
 					Até que ponto a IA pode ser utilizada com segurança para auxiliar no aprendizado dos alunos? Os debates sobre inteligência artificial (IA) estão em alta, e na educação não poderia ser diferente >>
 				</p>
 				<footer class="article-info">
-					<i>Por Claudia Vieira Levinsohn.</i>
+					<i>Por Claudia Vieira Levinsohn. 03/08/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -136,7 +187,7 @@
 					Os Apple AirTags estão fazendo sucesso entre as mães de crianças com idade escolar, é possivel perceber um aumento no número de vendas >>
 				</p>
 				<footer class="article-info">
-					<i>Por Filipe Maria.</i>
+					<i>Por Filipe Maria. 02/08/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -153,6 +204,9 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+
+<p class="privacidade"><a href="/politicaprivacidade.html">Políticas de Privacidade</a></p>
+
 
 		<footer class="footer">
 			<div class="social-icons">
