--- a/paginas/educacao001.html
+++ b/paginas/educacao001.html
@@ -44,7 +44,7 @@
 
 		<p class="texto">As escolas terão um papel crucial no processo de implementação das mudanças, e a formação dos professores será aprimorada para garantir que estejam preparados para oferecer o melhor ensino possível. A valorização dos docentes é vista como um pilar fundamental para o sucesso da reforma educacional.</p>
         <p class="texto">A Secretaria de Educação do estado de São Paulo prevê que a nova estrutura do Ensino Médio esteja completamente implementada em todas as escolas estaduais até o próximo ano letivo. Com essas mudanças, espera-se que os estudantes paulistas estejam melhor preparados para enfrentar os desafios acadêmicos e profissionais que os aguardam, fortalecendo assim o sistema educacional e o futuro da juventude do estado.</p>
-        <p class="texto"> Por André Martins. </p>
+        <p class="texto"> Por André Martins. 31/08/2023</p>
         <p class="texto-autor"></p>
 
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
