--- a/paginas/educacao005 .html
+++ b/paginas/educacao005 .html
@@ -44,7 +44,7 @@
 		<p class="texto">Cultivar um líder demanda empatia, capacidade de conexão, autenticidade, coragem, mediação de conflitos e um foco incansável em metas claras. Líderes moldam carreiras, espalhando inspiração e exemplo. Em uma organização, o clima é um espelho da liderança, e líderes inspiradores injetam positividade e produtividade.</p>
         <p class="texto">A clara distinção entre líderes e chefes atua como eixo na criação de ambientes laborais robustos e motivadores. Enquanto chefes podem ser proficientes em operações, líderes são a força propulsora, incitando sucesso duradouro. Aqui reside o poder de metamorfosear culturas organizacionais e alcançar excelência em resultados.</p>
         <p class="texto">De modo a concluir, a dicotomia entre líderes e chefes transcende títulos, forjando o tecido da gestão. A verdadeira diferença pulsa nas abordagens e nas consequências geradas. Escolher ser líder vai além de comandar; é inspirar, guiar e catalisar. Assim, abraçar a liderança não só promove êxito, mas fomenta um ambiente de crescimento, colaboração e realização mútua.</p>
-		<p class="texto-autor">Por Kiko Campos <a href=https://www.linkedin.com/in/kikocampos/?locale=pt_BR>Linkedin:KikoCampos</a> </p>
+		<p class="texto-autor">Por Kiko Campos  23/08/2023<a href=https://www.linkedin.com/in/kikocampos/?locale=pt_BR>Linkedin:KikoCampos</a> </p>
 		
         <p class="texto-autor"><i>Embasado no artigo: https://www.poderdaescuta.com/diferenca-entre-lider-e-chefe/</i></p>
 
