--- a/paginas/saude002.html
+++ b/paginas/saude002.html
@@ -44,7 +44,7 @@
         <p class="texto">A citisiniclina foi considerada segura e bem tolerada, com efeitos colaterais leves, como sonhos anormais e insônia afetando menos de 10% dos grupos de tratamento, e nenhuma ocorrência de eventos adversos graves. Caso seja aprovada pelos reguladores, a citisiniclina pode se tornar uma nova opção para tratar o tabagismo, uma das principais causas de morte evitável em todo o mundo.</p>
         <p class="texto">Embora ainda não haja uma previsão oficial, a Achieve Life Sciences planeja submeter o pedido de autorização de uso nos EUA no primeiro semestre de 2024 para o medicamento citisiniclina contra o tabagismo.</p>
         <p class="texto">Fonte: JAMA e Achieve Life Sciences</p>
-        <p class="texto-autor">Por Fidel Forato</p>
+        <p class="texto-autor">Por Fidel Forato  02/08/2023</p>
 
 
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
