--- a/paginas/saude003.html
+++ b/paginas/saude003.html
@@ -44,7 +44,7 @@
         <p class="texto">O potencial da IA para revolucionar a área de diagnóstico médico é inegável. Ao proporcionar resultados mais precisos e eficientes, a IA emerge como uma ferramenta promissora para o futuro da medicina, com implicações profundas na detecção precoce e no tratamento bem-sucedido de doenças como o câncer de mama.</p>
         <p class="texto">Este estudo foi financiado pela Sociedade Sueca de Câncer, pela Confederação de Centros Regionais de Câncer e pelo financiamento governamental sueco para pesquisa clínica (ALF), reforçando o compromisso de diversas instituições com a inovação e o avanço científico. </p>
         <p class="texto">À medida que a pesquisa médica continua a explorar as possibilidades oferecidas pela IA, espera-se que futuros estudos e implementações ampliem ainda mais os horizontes da medicina diagnóstica, proporcionando diagnósticos mais rápidos, precisos e acessíveis, e, assim, contribuindo para uma saúde mais eficaz e abrangente para as mulheres.</p>
-        <p class="texto-autor">Por Kristina Lång, PhD. </p>
+        <p class="texto-autor">Por Kristina Lång, PhD.  14/08/2023 </p>
 
 
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
