--- a/paginas/saude005.html
+++ b/paginas/saude005.html
@@ -43,7 +43,7 @@
         <p class="texto">Os resultados foram reveladores: o consumo moderado de cerveja NÃO afetou negativamente o desempenho esportivo, como indicado pelo teste realizado no estudo. É importante ressaltar que, no contexto dessa pesquisa, a ingestão de cerveja foi moderada, correspondendo em média a 2 latas. É relevante mencionar que outros estudos alertam que o consumo excessivo de cerveja ou álcool pode sim prejudicar vários aspectos relacionados ao rendimento esportivo.</p>
         <p class="texto">Esse estudo desempenha um papel crucial no combate ao sensacionalismo em torno da nutrição, o qual, em grande parte devido às plataformas de redes sociais, tem sido amplamente difundido. A nutrição, de fato, transcende a simples escolha de alimentos ou bebidas. Ela engloba um conjunto complexo de circunstâncias. E é fato que, com moderação, dificilmente algo se tornará prejudicial.</p>
 		
-        <p class="texto-autor">Por Nutricionista Esp. Ricardo Galduroz <a href="https://www.instagram.com/nutricionistaricardo/" target="_blank">@nutricionistaricardo</a></p>
+        <p class="texto-autor">Por Nutricionista Esp. Ricardo Galduroz  23/08/2023<a href="https://www.instagram.com/nutricionistaricardo/" target="_blank">@nutricionistaricardo</a></p>
 
         
 
