--- a/paginas/saude006.html
+++ b/paginas/saude006.html
@@ -43,7 +43,7 @@
         <p class="texto">Por outro lado, estudos sobre intervenções cirúrgicas, como a cirurgia bariátrica, indicaram melhorias na dor lombar, incapacidade e qualidade de vida em pacientes obesos. No entanto, esses resultados também foram acompanhados por desafios, como a adesão a longo prazo e a manutenção dos benefícios obtidos.</p>
         <p class="texto">Vale destacar que a maioria dos estudos avaliados apresentou riscos de viés que afetam a confiabilidade dos resultados. Esta análise reforça a necessidade de mais pesquisas rigorosas para compreender melhor a relação entre perda de peso e dor lombar. Embora existam indícios promissores de que a perda de peso pode ser benéfica, é crucial obter evidências mais sólidas e confiáveis para orientar práticas de tratamento. A dor lombar é uma questão de saúde pública com impactos significativos na vida das pessoas, e encontrar abordagens eficazes para o seu manejo é uma meta importante para profissionais de saúde e pacientes.</p>
 		
-        <p class="texto-autor">Por Fisioterapeuta Do. Danilo Armbrust  <a href="https://www.instagram.com/danilo.armbrust/" target="_blank">@danilo.armbrust</a></p>
+        <p class="texto-autor">Por Fisioterapeuta Do. Danilo Armbrust  24/08/2023<a href="https://www.instagram.com/danilo.armbrust/" target="_blank">@danilo.armbrust</a></p>
 
         
 
