--- a/paginas/tecnologia005.html
+++ b/paginas/tecnologia005.html
@@ -43,7 +43,7 @@
         <p class="texto">Para 60% destes empresários, as principais preocupações incluem a transformação digital, o aperfeiçoamento do serviço ao cliente (55%) e a inovação de produtos e serviços (56%). Investimentos em pesquisa e desenvolvimento também ganharam destaque para os próximos 12 meses. O Brasil registou uma intenção de 74% por parte dos empresários de aumentar os investimentos nessa área, em comparação com os 76% no primeiro semestre de 2022.</p>
 		<p class="texto">Elias Zoghbi, o parceiro principal de Consultoria em Tecnologia na Grant Thornton Brasil, observa que a pandemia da COVID-19 acelerou uma evolução sem precedentes na TI, devido à necessidade de manter as atividades económicas em tempos de restrições de viagens. De acordo com Zoghbi, a tecnologia da informação tem fornecido às empresas a solução fundamental para se manterem competitivas no mercado, um movimento que, em sua opinião, deve persistir em avançar e aperfeiçoar-se a cada ano.</p>
 
-		<p class="texto-autor"> Por André Lopes</p>
+		<p class="texto-autor"> Por André Lopes  31/08/2023</p>
         
 
 
