--- a/paginas/tecnologia006.html
+++ b/paginas/tecnologia006.html
@@ -45,7 +45,7 @@
 		<p class="texto">A Steam Deck oferece a flexibilidade de jogar jogos da Steam em diversas situações, desde o transporte público ou até mesmo na TV, ampliando as oportunidades de jogo. Isso pode levar os consumidores a comprar mais jogos na plataforma, tornando-a uma estratégia de longo prazo para a Valve. No entanto, os brasileiros terão que esperar um pouco mais para ter acesso à Steam Deck, já que ainda não há uma data de lançamento definida para o mercado do Brasil. O embate entre a Steam Deck e a Lenovo Legion Go promete aquecer o mercado de consoles portáteis como o novo Asus Rog Ally, oferecendo aos jogadores mais opções e inovações.</p>
 		<img class="imagemtexto" src="/images/AsusRrogAlly.png">
 
-		<p class="texto-autor"> Por Carlos Oliveira</p>
+		<p class="texto-autor"> Por Carlos Oliveira  02/09/2023</p>
         
 
 
