--- a/saude.html
+++ b/saude.html
@@ -50,7 +50,7 @@
 					A dor lombar é uma afecção que afeta a qualidade de vida de muitas pessoas em todo o mundo. Este artigo analisa a relação entre dor lombar e obesidade, explorando a eficácia de programas de perda de peso como estratégia de alívio para essa condição >>
 				</p>
 				<footer class="article-info">
-					<i>Por Fisioterapeuta Do. Danilo Armbrust </i>
+					<i>Por Fisioterapeuta Do. Danilo Armbrust  24/08/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -69,7 +69,7 @@
 					A prescrição individualizada e o acompanhamento das sessões de treinamento de força (TF) são funções cruciais dos personal trainers. No entanto, poucos estudos exploraram como a supervisão afeta praticantes experientes >>
 				</p>
 				<footer class="article-info">
-					<i>Por Prof. Esp. Agnaldo Ribeiro  </i>
+					<i>Por Prof. Esp. Agnaldo Ribeiro  15/08/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -88,7 +88,7 @@
 						Aqueles que apreciam uma cerveja muitas vezes empregam diversos argumentos para justificar o seu consumo, expressões como: "após um dia de trabalho, é merecido desfrutar de uma cervejinha para relaxar," "a cerveja me auxilia a ter um sono mais tranquilo" e até mesmo "a cerveja favorece a interação social" são frequentemente utilizadas como respaldo >>
 					</p>
 					<footer class="article-info">
-						<i>Por Nutricionista Esp. Ricardo Galduroz</i>
+						<i>Por Nutricionista Esp. Ricardo Galduroz   23/08/2023</i>
 					</footer>
 					</div>
 				</a>	
@@ -106,7 +106,7 @@
 					Avanços na área médica estão trazendo resultados promissores no campo da detecção precoce do câncer de mama, graças à integração da inteligência artificial (IA). Um estudo realizado na Suécia trouxe à tona dados que indicam >>
 				</p>
 				<footer class="article-info">
-					<i>Por Kristina Lång, PhD .</i>
+					<i>Por Kristina Lång, PhD.  14/08/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -126,7 +126,7 @@
 					O treinamento de força tem forte associação com a prevenção de mortalidade por todas as causas, considerando que o aumento da massa muscular e a força estimulam a resposta metabólica celular, em especial as condições de controle anti-inflamatório e imunológico. >>
 				</p>
 				<footer class="article-info">
-					<i>Por Dr. Aylton Figueira Jr.</i>
+					<i>Por Dr. Aylton Figueira Jr.   08/08/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -143,7 +143,7 @@
 					Para quem busca novas formas para parar de fumar, os resultados positivos da terceira e última fase de testes de um novo medicamento podem representar um novo caminho. Nos testes, o remédio fitoterápico citisiniclina, também conhecido cistina, da Achieve >>
 				</p>
 				<footer class="article-info">
-					<i>Por Fidel Forato.</i>
+					<i>Por Fidel Forato.  02/08/2023</i>
 				</footer>
 				</div>
 			</a>
