--- a/tecnologia.html
+++ b/tecnologia.html
@@ -49,7 +49,7 @@
 					O mercado de consoles portáteis está em alta, impulsionado pelo lançamento da Steam Deck, mas agora a Lenovo Legion Go surge como concorrente de peso. Esta nova consola portátil, apresentada pela empresa asiática, não se limita ao gaming, oferecendo versatilidade para diversas necessidades dos utilizadores. >>
 				</p>
 				<footer class="article-info">
-					<i>Por Carlos Oliveira</i>
+					<i>Por Carlos Oliveira  02/09/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -67,7 +67,7 @@
 					Presidente do BC diz que o superapp permitirá uma maior competição entre os bancos na oferta de produtos e serviços. Dentro do 'agregador financeiro', as pessoas poderão saber a totalidade de débitos e de créditos em todos os bancos. >>
 				</p>
 				<footer class="article-info">
-					<i>Por Alexandro Martello</i>
+					<i>Por Alexandro Martello  14/08/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -86,7 +86,7 @@
 					Num relatório recente da Grant Thornton, abrangendo 28 países e inquirindo mais de 4,7 mil empreendedores, é evidente que o campo da Tecnologia da Informação (TI) continua a atrair a atenção das empresas brasileiras >>
 				</p>
 				<footer class="article-info">
-					<i>Por André Lopes</i>
+					<i>Por André Lopes  31/08/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -104,7 +104,7 @@
 						Conhecida pelos brasileiros como a Nubank Europeia, a Revolut é uma das fintechs mais populares na Europa, chegou ao Brasil com sua conta digital, oferecendo aos brasileiros a facilidade de converter automaticamente dinheiro em até 27 moedas, incluindo dólar e euro, a qualquer momento do dia e com compatibilidade com Pix >>
 					</p>
 					<footer class="article-info">
-						<i>Por Beatriz Rocha</i>
+						<i>Por Beatriz Rocha  06/08/2023</i>
 					</footer>
 					</div>
 			</a>
@@ -122,7 +122,7 @@
 						A formação educacional é fundamental para a excelência na área da saúde, reconhecida nas diretrizes de capacitação dos profissionais de saúde. A aprendizagem contínua por meio da Educação Permanente (EP) emergiu como uma ferramenta estratégica para transformar currículos, práticas pedagógicas e serviços de saúde >>
 					</p>
 					<footer class="article-info">
-						<i>Por Maricelia Tavares Borges Oliveira</i>
+						<i>Por Maricelia Tavares Borges Oliveira  21/08/2023</i>
 					</footer>
 					</div>
 			</a>
@@ -140,7 +140,7 @@
 					A Agência Espacial Europeia (ESA) iniciou, na passada segunda-feira, as manobras para a reentrada na Terra do satélite Aeolus, que estudou os ventos do planeta com tecnologia portuguesa, mas que tem “morte” anunciada hoje, quando caírem os destroços no Atlântico. >>
 				</p>
 				<footer class="article-info">
-					<i>Por Francisco Laranjeira</i>
+					<i>Por Francisco Laranjeira  29/07/2023</i>
 				</footer>
 				</div>
 			</a>
@@ -159,7 +159,7 @@
 						A chegada dos Apple AirTags ao mercado foi recebida com entusiasmo e controvérsia, conforme relatórios destacam o bom, o mau e os vilões dessa nova tecnologia. Originalmente concebidos como dispositivos para localizar objetos perdidos, os AirTags rapidamente se tornaram uma solução inovadora para manter as crianças seguras e monitoradas. No entanto, o uso desses pequenos rastreadores não passou despercebido, levantando questões sobre privacidade e possíveis usos indevidos. >>
 					</p>
 					<footer class="article-info">
-						<i>Por Filipe Maria</i>
+						<i>Por Filipe Maria  02/08/2023</i>
 					</footer>
 					</div>
 				</a>
