--- a/paginas/saude001.html
+++ b/paginas/saude001.html
@@ -44,7 +44,7 @@
 
 		<p class="texto">Muito importante mencionar que não houve diferença na prescrição com cargas altas e baixas, o que parece indicar efeito significativo tanto na resposta funcional como na composição corporal em curto prazo. Nesse sentido a intensidade leve e moderada na musculação parece ser uma estratégia importante no aumento da aderência em programas de exercício em homens sobreviventes de câncer de próstata. A prescrição que apresentou melhor efeito foi com intensidade de 40-60%, treinamento para todo o corpo, 1 série por grupo muscular.</p>
         <p class="texto">Ainda vale lembrar que o treinamento de força aumenta a produção e atividade da testosterona, aumento da atividade do micro-RNA, PGC-1a, redução da expressão de miostatina.  Portanto, atenção: o câncer atingirá mais de 10 milhões de pessoas até 2030 e será com esse grupo que os profissionais do futuro trabalharão.</p>
-        <p class="texto"> Profº Dr. Aylton Figueira Jr. </p>
+        <p class="texto"> Profº Dr. Aylton Figueira Jr.  08/08/2023</p>
         <p class="texto-autor"> @ayltonfigueira.dr</p>
 
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
