--- a/educacao.html
+++ b/educacao.html
@@ -143,7 +143,8 @@
 					</h2>
 					<p class="article-content">
 						Até que ponto a IA pode ser utilizada com segurança para auxiliar no aprendizado dos alunos?</p>
-        <p class="texto">Os debates sobre inteligência artificial (IA) estão em alta, e na educação não poderia ser diferente. É um misto de dúvidas, busca pelo conhecimento das ferramentas e medo de ficar para trás e não acompanhar os avanços da tecnologia. Alguns estudos mostram que a IA será uma forte aliada para a transformação do ensino e as empresas já apresentam lançamentos de recursos que prometem colaborar com o trabalho dos professores e com o aprendizado dos alunos. >>
+        			<p class="texto">
+						Os debates sobre inteligência artificial (IA) estão em alta, e na educação não poderia ser diferente. É um misto de dúvidas, busca pelo conhecimento das ferramentas e medo de ficar para trás e não acompanhar os avanços da tecnologia. Alguns estudos mostram que a IA será uma forte aliada para a transformação do ensino e as empresas já apresentam lançamentos de recursos que prometem colaborar com o trabalho dos professores e com o aprendizado dos alunos. >>
 					</p>
 					<footer class="article-info">
 						<i>Por Claudia Vieira Levinsohn  03/08/2023</i>
@@ -152,7 +153,11 @@
 				</a>
 
 
-
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
 		
 
     <footer class="footer">
