--- a/index.html
+++ b/index.html
@@ -193,6 +193,14 @@
 			</a>
 		</div>
 
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
+		
+	
+
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -208,9 +216,9 @@
 
 		<footer class="footer">
 			<div class="social-icons">
-				<a href="https://www.facebook.com/profile.php?id=100095069508731" target="_blank" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
-				<a href="https://www.instagram.com/revistas_online_/" target="_blank" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
-				<a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
+				<a href="https://www.facebook.com/profile.php?id=100095069508731" target="_blank" class="social-icon" title="Nosso Facebook"><img src="/images/facebookbranco.png" alt="Facebook"></a>
+				<a href="https://www.instagram.com/revistas_online_/" target="_blank" class="social-icon" title="Nosso Instagram"><img src="/images/instagrambranco.png" alt="Instagram"></a>
+				<a href="mailto:revistasonline@sapo.pt" class="social-icon" title="Nosso E-mail"><img src="/images/emailbranco.png" alt="Email"></a>
 				
 				<a href="/politicaprivacidade.html" class="social-icon" title="Políticas de Privacidade"><img src="/images/privacidade.png" alt="PoliticasDePrivacidade"></a>
 			</div>
