--- a/paginas/educacao003.html
+++ b/paginas/educacao003.html
@@ -49,6 +49,11 @@
 		
         <p class="texto-autor"><i>Embasado no artigo: SUBTIL VOGELMANN, Talisson; DE SOUZA FERRAZ, Marcos Guilherme; BRAWERMAN-ALBINI, Andressa. PRESS START PARA APRENDER: VIDEOGAMES E APRENDIZAGEM DE LÍNGUA INGLESA. Revista Docência e Cibercultura, [S.l.], v. 4, n. 3, p. 179-212, dez. 2020. ISSN 2594-9004. Disponível em: <https://www.e-publicacoes.uerj.br/index.php/re-doc/article/view/52630>. Acesso em: 17 ago. 2023. doi:https://doi.org/10.12957/redoc.2020.52630.</i></p>
 
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
 		
     <footer class="footer">
         <div class="social-icons">
