--- a/paginas/educacao004.html
+++ b/paginas/educacao004.html
@@ -47,7 +47,13 @@
 		<p class="texto-autor">Por Valéria Maria A. S. Pontes 19/08/2023<a href=#>@valeria_maria_amorim</a> </p>
 		
         <p class="texto-autor"><i>Embasado no artigo: Pontes, V. M. A. da S. (2023). AS INOVAÇÕES TECNOLÓGICAS NA EDUCAÇÃO: O USO DE TECNOLOGIA E NOVAS METODOLOGIAS. Revista Ilustração, 4(2), 125–129. https://doi.org/10.46550/ilustracao.v4i2.164</i></p>
-
+		
+		
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
 		
     <footer class="footer">
         <div class="social-icons">
