--- a/paginas/educacao005 .html
+++ b/paginas/educacao005 .html
@@ -48,7 +48,13 @@
 		
         <p class="texto-autor"><i>Embasado no artigo: https://www.poderdaescuta.com/diferenca-entre-lider-e-chefe/</i></p>
 
-		
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
+
+
     <footer class="footer">
         <div class="social-icons">
             <a href="https://www.facebook.com/profile.php?id=100095069508731" target="_blank" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
