--- a/paginas/educacao006.html
+++ b/paginas/educacao006.html
@@ -48,6 +48,11 @@
 		
         <p class="texto-autor"><i>Embasado no artigo: TORRES, Nadielle Arruda Monteiro de Mello. Criação de jogos digitais como estratégia didática visando o desenvolvimento de habilidades cognitivas e socioemocionais. 2019. Dissertação (Mestrado em Projetos Educacionais de Ciências) - Escola de Engenharia de Lorena, University of São Paulo, Lorena, 2019. doi:10.11606/D.97.2020.tde-29012020-163201. Acesso em: 2023-08-27.</i></p>
 
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
 		
     <footer class="footer">
         <div class="social-icons">
