--- a/paginas/revolut.html
+++ b/paginas/revolut.html
@@ -48,6 +48,12 @@
 
 		</p>
         <p class="texto-autor"> Por Beatriz Rocha </p>
+
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
         
 		<footer class="footer">
 			<div class="social-icons">
