--- a/paginas/saude005.html
+++ b/paginas/saude005.html
@@ -45,7 +45,11 @@
 		
         <p class="texto-autor">Por Nutricionista Esp. Ricardo Galduroz  23/08/2023<a href="https://www.instagram.com/nutricionistaricardo/" target="_blank">@nutricionistaricardo</a></p>
 
-        
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
 
 
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
