--- a/paginas/tecnologia002.html
+++ b/paginas/tecnologia002.html
@@ -44,6 +44,12 @@
         <p class="texto">Em contrapartida, há quem veja os AirTags como uma oportunidade para o desenvolvimento de aplicativos e serviços adicionais que vão além do rastreamento tradicional. Os adeptos defendem que essa tecnologia pode ser aproveitada para criar soluções inovadoras, como a localização de animais de estimação ou objetos perdidos em espaços amplos, como parques e praias. Essas perspectivas positivas visam explorar ainda mais o potencial dos AirTags como aliados na vida cotidiana das pessoas.</p>
         <p class="texto">Em resumo, a chegada dos Apple AirTags gerou reações mistas, com benefícios reais para a segurança infantil e rastreamento de objetos, mas também com desafios relacionados à privacidade e consentimento. A tecnologia, por si só, não é boa nem má, mas a responsabilidade recai sobre os usuários e fabricantes em como aplicá-la eticamente e evitar potenciais abusos. Com o contínuo desenvolvimento e refinamento dessa tecnologia, é esperado que medidas de segurança e conscientização avancem, a fim de encontrar um equilíbrio entre conveniência e proteção dos direitos individuais.</p>
 		<p class="texto-autor"> Por Filipe Maria  02/08/2023</p>
+
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
         
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
 				crossorigin="anonymous"></script>
