--- a/paginas/tecnologia004.html
+++ b/paginas/tecnologia004.html
@@ -44,7 +44,11 @@
         <p class="texto">As Tecnologias Digitais, predominantemente o ensino a distância e a Telessaúde, emergiram como ferramentas poderosas para a Educação Permanente. Essas plataformas democratizam o acesso ao conhecimento, estimulam métodos de ensino inovadores e aprimoram o cuidado centrado no usuário. Em conclusão, este estudo serve como catalisador para pesquisas futuras, encorajando instituições de saúde a abraçar ferramentas tecnológicas e inaugurar uma nova era de educação dinâmica e cuidado qualificado no âmbito do SUS.</p>
 		<p class="texto-autor"> Por Mariceli Tavares Borges Oliveira  24/08/2023</p>
         
-
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
 
     <footer class="footer">
         <div class="social-icons">
