--- a/saude.html
+++ b/saude.html
@@ -148,6 +148,12 @@
 				</div>
 			</a>
 
+			<div class="bannerbot">
+				<a href="https://www.catarse.me/revistasonline?ref=project_link">
+					<img src="/images/bannerbot.png" alt="Banner">
+				</a>
+			</div>
+
 			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
 			crossorigin="anonymous"></script>
 	   <ins class="adsbygoogle"
