--- a/paginas/educacao001.html
+++ b/paginas/educacao001.html
@@ -47,6 +47,12 @@
         <p class="texto"> Por André Martins. 31/08/2023</p>
         <p class="texto-autor"></p>
 
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
+
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
 				crossorigin="anonymous"></script>
 		   <ins class="adsbygoogle"
