--- a/paginas/saude002.html
+++ b/paginas/saude002.html
@@ -46,6 +46,12 @@
         <p class="texto">Fonte: JAMA e Achieve Life Sciences</p>
         <p class="texto-autor">Por Fidel Forato  02/08/2023</p>
 
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
+
 
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
 		crossorigin="anonymous"></script>
