--- a/paginas/saude004.html
+++ b/paginas/saude004.html
@@ -45,7 +45,11 @@
 		
         <p class="texto-autor"><i>Embasado no artigo: Lopes, C. R., Soares, E. G., Oenning, L., Brigatto, F. A., & Marchetti, P. H. (2020). Supervised resistance training session increases the volume load and the subjective responses in well-trained men. Journal of Physical Education, 31(1), e-3144. https://doi.org/10.4025/jphyseduc.v31i1.3144</i></p>
         
-
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
 
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
 		crossorigin="anonymous"></script>
