--- a/paginas/saude006.html
+++ b/paginas/saude006.html
@@ -46,7 +46,11 @@
         <p class="texto-autor">Por Fisioterapeuta Do. Danilo Armbrust  24/08/2023<a href="https://www.instagram.com/danilo.armbrust/" target="_blank">@danilo.armbrust</a></p>
 
         
-
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
 
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
 		crossorigin="anonymous"></script>
