--- a/paginas/tecnologia001.html
+++ b/paginas/tecnologia001.html
@@ -45,6 +45,12 @@
 		<p class="texto">Muito importante mencionar que não houve diferença na prescrição com cargas altas e baixas, o que parece indicar efeito significativo tanto na resposta funcional como na composição corporal em curto prazo. Nesse sentido a intensidade leve e moderada na musculação parece ser uma estratégia importante no aumento da aderência em programas de exercício em homens sobreviventes de câncer de próstata. A prescrição que apresentou melhor efeito foi com intensidade de 40-60%, treinamento para todo o corpo, 1 série por grupo muscular.</p>
         <p class="texto">Ainda vale lembrar que o treinamento de força aumenta a produção e atividade da testosterona, aumento da atividade do micro-RNA, PGC-1a, redução da expressão de miostatina.  Portanto, atenção: o câncer atingirá mais de 10 milhões de pessoas até 2030 e será com esse grupo que os profissionais do futuro trabalharão.</p>
         <p class="texto-autor"> Por Francisco Larangeira   29/07/2023</p>
+
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
         
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
 				crossorigin="anonymous"></script>
