--- a/paginas/tecnologia003.html
+++ b/paginas/tecnologia003.html
@@ -45,6 +45,12 @@
         <p class="texto">O presidente do BC destaca que essa iniciativa irá simplificar a gestão financeira dos usuários, permitindo que eles tenham uma visão completa de seu fluxo de caixa, similar ao que as empresas já fazem. Isso contribuirá para uma experiência financeira mais clara e eficiente.</p>
 		<p class="texto">Vale ressaltar que não será necessária regulamentação adicional para os agregadores financeiros, uma vez que as regras do open finance já abrangem esse tipo de produto. A proposta é oferecer aos consumidores um ambiente financeiro mais competitivo e conveniente, onde informações e serviços de diferentes instituições estarão disponíveis em um único local de acesso.</p>
 		<p class="texto-autor"> Por Alexandro Martello  14/08/2023</p>
+
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
         
 
 
