--- a/paginas/tecnologia005.html
+++ b/paginas/tecnologia005.html
@@ -45,6 +45,11 @@
 
 		<p class="texto-autor"> Por André Lopes  31/08/2023</p>
         
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
 
 
     <footer class="footer">
