--- a/paginas/tecnologia006.html
+++ b/paginas/tecnologia006.html
@@ -46,6 +46,12 @@
 		<img class="imagemtexto" src="/images/AsusRrogAlly.png">
 
 		<p class="texto-autor"> Por Carlos Oliveira  02/09/2023</p>
+
+		<div class="bannerbot">
+			<a href="https://www.catarse.me/revistasonline?ref=project_link">
+				<img src="/images/bannerbot.png" alt="Banner">
+			</a>
+		</div>
         
 
 
