--- a/tecnologia.html
+++ b/tecnologia.html
@@ -38,6 +38,24 @@
 		<p class="maislidas">Matérias mais lidas de Tecnologia: </p>
 
 		<div class="articles-container">
+			<a class="article-educacao" href="/paginas/tecnologia007.html">
+				<figure class="article-image">
+				<img src="/images/technologia9-mini-banner.png">
+				</figure>
+				<div class="article-body">
+				<h2 class="article-title">
+					Produção do Cybertruck da Tesla deixou de ser um segredo
+				</h2>
+				<p class="article-content">
+					Elon Musk, o visionário fundador da Tesla, está nos bastidores a preparar um novo veículo elétrico revolucionário, que vem sendo amplamente discutido e que promete transformar o mercado automobilístico. Esse carro, cujo preço almejado é de 25 mil dólares, está envolto em mistério, mas informações recentes que surgiram na biografia de Musk lançam luz sobre sua existência e alguns detalhes empolgantes. O que se sabe até agora é que ele compartilhará semelhanças de design com o icônico Cybertruck da Tesla. >>
+				</p>
+				<footer class="article-info">
+					<i>Por Carlos Oliveira  10/09/2023</i>
+				</footer>
+				</div>
+			</a>
+
+		<div class="articles-container">
 			<a class="article-educacao" href="/paginas/tecnologia006.html">
 				<figure class="article-image">
 				<img src="/images/technologia8-mini-banner.png">
