--- a/tecnologia.html
+++ b/tecnologia.html
@@ -40,6 +40,24 @@
 		<div class="articles-container">
 			<a class="article-educacao" href="/paginas/tecnologia007.html">
 				<figure class="article-image">
+				<img src="/images/mini-bannertechnologia10.jpg">
+				</figure>
+				<div class="article-body">
+				<h2 class="article-title">
+					A Apple acaba de lançar a nova linha de iPhone 15
+				</h2>
+				<p class="article-content">
+					A Apple anunciou recentemente sua mais nova linha de iPhones, o iPhone 15, durante o evento "Wonderlust" realizado em Cupertino, Califórnia (EUA). Essa nova geração de smartphones apresenta quatro modelos distintos e preços variados, com valores que começam em 989 euros em Portugal e chegam a 1.999 euros. As diferenças entre os modelos se concentram principalmente em atualizações internas, como os processadores A16 e A17, mas também trazem mudanças significativas na experiência do usuário. >>
+				</p>
+				<footer class="article-info">
+					<i>Por Fátima Caçador  12/09/2023</i>
+				</footer>
+				</div>
+			</a>
+
+		<div class="articles-container">
+			<a class="article-educacao" href="/paginas/tecnologia007.html">
+				<figure class="article-image">
 				<img src="/images/technologia9-mini-banner.png">
 				</figure>
 				<div class="article-body">
