--- a/educacao.html
+++ b/educacao.html
@@ -1,170 +1,217 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="br-pt">
 
-
-
 <head>
-	<title>Revistas Online</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="font/font.css">
-	<link href="style.css" rel="stylesheet" media="screen">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900"
-	crossorigin="anonymous"></script>
-	<link rel="icon" type="image/png" href="/images/icone RO.png">
+    <title>Revistas Online</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="font/font.css">
+    <link href="style.css" rel="stylesheet" media="screen">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7224323364698900" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" href="/images/icone RO.png">
+    <script src="search.js"></script>
 </head>
+
+<body>
+    <div class="fix top_add_bar">
+        <div class="addbar_leaderborard">
+            <img src="/images/bannertop.png" href="/index.html">
+        </div>
+    </div>
+
+    <div class="manu_area">
+        <div class="mainmenu menu-wrap wrap">
+            <ul id="nav-bottom" class="button_area">
+                <li><a href="/index.html">← Voltar</a></li>
+                <li><a href="/educacao.html">Educação</a></li>
+                <li><a href="/saude.html">Saúde</a></li>
+				<li><a href="/tecnologia.html">Tecnologia</a></li>
+            </ul>
+        </div>
+    </div>
+
+	<div class="search-container">
+		<input type="text" id="search-input" placeholder="Pesquisar...">
+		<button onclick="searchArticles()">Buscar</button>
+	</div>
 	
-	<body>
+	
 
-		<div class="fix top_add_bar">
-			<div class="addbar_leaderborard">
-			  <img src="/images/bannertop.png" href="/index.html">
-			</div>
-		  </div>
-		  
-		  <div class="manu_area">
-			<div class="mainmenu menu-wrap wrap">
-			  <ul id="nav-bottom" class="button_area">
-				<li><a href="/index.html">← Voltar</a></li>
-				<li><a href="/educacao.html">Educação</a></li>
-				<li><a href="/saude.html">Saúde</a></li>
-			  </ul>
-			</div>
-		  </div>
-		</div>
+    <p class="maislidas">Matérias mais lidas de Educação: </p>
 
-		<p class="maislidas">Matérias mais lidas de Educação: </p>
+    <div class="articles-container" id="article6">
+        <a class="article-educacao" href="/paginas/educacao003.html">
+            <figure class="article-image">
+                <img src="/images/educacao3-mini-banner.png">
+            </figure>
+            <div class="article-body">
+                <h2 class="article-title">
+                    Benefícios dos Videogames na Aprendizagem: Além da Diversão, uma Ferramenta de Desenvolvimento
+                </h2>
+                <p class="article-content">
+                    Os videogames, muitas vezes temidos por pais preocupados com o desempenho escolar de seus filhos, têm se mostrado como uma valiosa ferramenta de desenvolvimento. Longe de serem simples passatempos, os jogos eletrônicos têm o potencial de aprimorar habilidades cognitivas, promover o trabalho em equipe e até mesmo >>
+                </p>
+                <footer class="article-info">
+                    <i>Por Prof. Me. Danilo A. Luz Jr. 17/08/2023</i>
+                </footer>
+            </div>
+        </a>
+    </div>
 
-		<div class="articles-container">
+    <div class="articles-container" id="article5">
+        <a class="article-educacao" href="/paginas/educacao006.html">
+            <figure class="article-image">
+                <img src="/images/educacao5-mini-banner.png">
+            </figure>
+            <div class="article-body">
+                <h2 class="article-title">
+                    Transformação na Educação através da Tecnologia: Desenvolvimento de Competências para o Século XXI
+                </h2>
+                <p class="article-content">
+                    A sociedade contemporânea enfrenta mudanças profundas nos âmbitos político, econômico e social, onde a informação e a comunicação desempenham papéis cruciais. O avanço das Tecnologias de Informação e Comunicação (TIC) impulsionou inovações em diversos setores, impactando o trabalho e, consequentemente, a educação. Diante disso, é imperativo repensar currículos e programas escolares para desenvolver habilidades cognitivas >>
+                </p>
+                <footer class="article-info">
+                    <i>Por Kiko Campos 27/08/2023</i>
+                </footer>
+            </div>
+        </a>
+    </div>
 
-			<a class="article-educacao" href="/paginas/educacao003.html">
-				<figure class="article-image">
-				<img src="/images/educacao3-mini-banner.png">
-				</figure>
-				<div class="article-body">
-				<h2 class="article-title">
-					Benefícios dos Videogames na Aprendizagem: Além da Diversão, uma Ferramenta de Desenvolvimento
-				</h2>
-				<p class="article-content">
-					Os videogames, muitas vezes temidos por pais preocupados com o desempenho escolar de seus filhos, têm se mostrado como uma valiosa ferramenta de desenvolvimento. Longe de serem simples passatempos, os jogos eletrônicos têm o potencial de aprimorar habilidades cognitivas, promover o trabalho em equipe e até mesmo >>
-				</p>
-				<footer class="article-info">
-					<i>Por Prof. Me. Danilo A. Luz Jr.  17/08/2023</i>
-				</footer>
-				</div>
-			</a>
+    <div class="articles-container" id="article4">
+        <a class="article-educacao" href="/paginas/educacao005 .html">
+            <figure class="article-image">
+                <img src="/images/mini-banner-educação5.png">
+            </figure>
+            <div class="article-body">
+                <h2 class="article-title">
+                    Desvendando a Arte da Liderança: Inspiração versus Autoritarismo
+                </h2>
+                <p class="article-content">
+                    No turbilhão das redes sociais e no cenário corporativo, as diferenças entre líderes e chefes alimentam debates fervorosos. A verdade é que essas distinções não são apenas semânticas, mas delineiam abismos de ações. A metamorfose geracional tem acelerado a busca por coerência nas atitudes de liderança, rejeitando o ultrapassado lema do "faça o que eu digo, não o que eu faço" >>
+                </p>
+                <footer class="article-info">
+                    <i>Por Kiko Campos 23/08/2023</i>
+                </footer>
+            </div>
+        </a>
+    </div>
 
-			<div class="articles-container">
+    <div class="articles-container" id="article3">
+        <a class="article-educacao" href="/paginas/educacao001.html">
+            <figure class="article-image">
+                <img src="/images/educacao4-mini-banner.png">
+            </figure>
+            <div class="article-body">
+                <h2 class="article-title">
+                    Educação Digital: Transformando o Ensino Através da Tecnologia
+                </h2>
+                <p class="article-content">
+                    A rápida evolução das inovações tecnológicas está promovendo uma revolução em diversos setores da sociedade, incluindo a educação. No entanto, essa transformação não é tarefa simples. A escola, representada por professores, gestores e coordenadores pedagógicos, enfrenta o desafio de integrar a cultura digital ao currículo, criando um ambiente de ensino dinâmico e interativo >>
+                </p>
+                <footer class="article-info">
+                    <i>Por Valéria Maria A. S. Pontes 19/08/2023</i>
+                </footer>
+            </div>
+        </a>
+    </div>
 
-				<a class="article-educacao" href="/paginas/educacao006.html">
-					<figure class="article-image">
-					<img src="/images/educacao5-mini-banner.png">
-					</figure>
-					<div class="article-body">
-					<h2 class="article-title">
-						Transformação na Educação através da Tecnologia: Desenvolvimento de Competências para o Século XXI
-					</h2>
-					<p class="article-content">
-						A sociedade contemporânea enfrenta mudanças profundas nos âmbitos político, econômico e social, onde a informação e a comunicação desempenham papéis cruciais. O avanço das Tecnologias de Informação e Comunicação (TIC) impulsionou inovações em diversos setores, impactando o trabalho e, consequentemente, a educação. Diante disso, é imperativo repensar currículos e programas escolares para desenvolver habilidades cognitivas >>
-					</p>
-					<footer class="article-info">
-						<i>Por Kiko Campos  27/08/2023</i>
-					</footer>
-					</div>
-				</a>
+    <div class="articles-container" id="article2">
+        <a class="article-educacao" href="/paginas/educacao001.html">
+            <figure class="article-image">
+                <img src="/images/educacao1-mini-banner.png">
+            </figure>
+            <div class="article-body">
+                <h2 class="article-title">
+                    São Paulo reformula o Ensino Médio e inclui Educação Financeira na grade escolar.
+                </h2>
+                <p class="article-content">
+                    A Agência Espacial Europeia (ESA) iniciou, na passada segunda-feira, as manobras para a reentrada na Terra do satélite Aeolus, que estudou os ventos do planeta com tecnologia portuguesa, mas que tem “morte” anunciada hoje, quando caírem os destroços no Atlântico. >>
+                </p>
+                <footer class="article-info">
+                    <i>Por Andre Martins 31/08/2023</i>
+                </footer>
+            </div>
+        </a>
+    </div>
 
-			<div class="articles-container">
+    <div class="articles-container" id="article1">
+        <a class="article-educacao" href="/paginas/educacao002.html">
+            <figure class="article-image">
+                <img src="/images/educacao2-mini-banner.png">
+            </figure>
+            <div class="article-body">
+                <h2 class="article-title">
+                    Inteligência artificial desafia educadores e alunos.
+                </h2>
+                <p class="article-content">
+                    Até que ponto a IA pode ser utilizada com segurança para auxiliar no aprendizado dos alunos?
+                </p>
+                <p class="texto">
+                    Os debates sobre inteligência artificial (IA) estão em alta, e na educação não poderia ser diferente. É um misto de dúvidas, busca pelo conhecimento das ferramentas e medo de ficar para trás e não acompanhar os avanços da tecnologia. Alguns estudos mostram que a IA será uma forte aliada para a transformação do ensino e as empresas já apresentam lançamentos de recursos que prometem colaborar com o trabalho dos professores e com o aprendizado dos alunos. >>
+                </p>
+                <footer class="article-info">
+                    <i>Por Claudia Vieira Levinsohn 03/08/2023</i>
+                </footer>
+            </div>
+        </a>
+    </div>
 
-				<a class="article-educacao" href="/paginas/educacao005 .html">
-					<figure class="article-image">
-					<img src="/images/mini-banner-educação5.png">
-					</figure>
-					<div class="article-body">
-					<h2 class="article-title">
-						Desvendando a Arte da Liderança: Inspiração versus Autoritarismo
-					</h2>
-					<p class="article-content">
-						No turbilhão das redes sociais e no cenário corporativo, as diferenças entre líderes e chefes alimentam debates fervorosos. A verdade é que essas distinções não são apenas semânticas, mas delineiam abismos de ações. A metamorfose geracional tem acelerado a busca por coerência nas atitudes de liderança, rejeitando o ultrapassado lema do "faça o que eu digo, não o que eu faço" >>
-					</p>
-					<footer class="article-info">
-						<i>Por Kiko Campos  23/08/2023</i>
-					</footer>
-					</div>
-				</a>
+    <div class="bannerbot">
+        <a href="https://www.catarse.me/revistasonline?ref=project_link">
+            <img src="/images/bannerbot.png" alt="Banner">
+        </a>
+    </div>
 
-			<div class="articles-container">
-
-				<a class="article-educacao" href="/paginas/educacao001.html">
-					<figure class="article-image">
-					<img src="/images/educacao4-mini-banner.png">
-					</figure>
-					<div class="article-body">
-					<h2 class="article-title">
-						Educação Digital: Transformando o Ensino Através da Tecnologia
-					</h2>
-					<p class="article-content">
-						A rápida evolução das inovações tecnológicas está promovendo uma revolução em diversos setores da sociedade, incluindo a educação. No entanto, essa transformação não é tarefa simples. A escola, representada por professores, gestores e coordenadores pedagógicos, enfrenta o desafio de integrar a cultura digital ao currículo, criando um ambiente de ensino dinâmico e interativo >>
-					</p>
-					<footer class="article-info">
-						<i>Por Valéria Maria A. S. Pontes  19/08/2023</i>
-					</footer>
-					</div>
-				</a>
-
-		<div class="articles-container">
-
-			<a class="article-educacao" href="/paginas/educacao001.html">
-				<figure class="article-image">
-				<img src="/images/educacao1-mini-banner.png">
-				</figure>
-				<div class="article-body">
-				<h2 class="article-title">
-					São Paulo reformula o Ensino Médio e inclui Educação Financeira na grade escolar.
-				</h2>
-				<p class="article-content">
-					A Agência Espacial Europeia (ESA) iniciou, na passada segunda-feira, as manobras para a reentrada na Terra do satélite Aeolus, que estudou os ventos do planeta com tecnologia portuguesa, mas que tem “morte” anunciada hoje, quando caírem os destroços no Atlântico. >>
-				</p>
-				<footer class="article-info">
-					<i>Por Andre Martins  31/08/2023</i>
-				</footer>
-				</div>
-			</a>
-
-			<div class="articles-container">
-
-				<a class="article-educacao" href="/paginas/educacao002.html">
-					<figure class="article-image">
-					<img src="/images/educacao2-mini-banner.png">
-					</figure>
-					<div class="article-body">
-					<h2 class="article-title">
-						Inteligência artificial desafia educadores e alunos.
-					</h2>
-					<p class="article-content">
-						Até que ponto a IA pode ser utilizada com segurança para auxiliar no aprendizado dos alunos?</p>
-        			<p class="texto">
-						Os debates sobre inteligência artificial (IA) estão em alta, e na educação não poderia ser diferente. É um misto de dúvidas, busca pelo conhecimento das ferramentas e medo de ficar para trás e não acompanhar os avanços da tecnologia. Alguns estudos mostram que a IA será uma forte aliada para a transformação do ensino e as empresas já apresentam lançamentos de recursos que prometem colaborar com o trabalho dos professores e com o aprendizado dos alunos. >>
-					</p>
-					<footer class="article-info">
-						<i>Por Claudia Vieira Levinsohn  03/08/2023</i>
-					</footer>
-					</div>
-				</a>
-
-
-		<div class="bannerbot">
-			<a href="https://www.catarse.me/revistasonline?ref=project_link">
-				<img src="/images/bannerbot.png" alt="Banner">
-			</a>
-		</div>
-		
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7950959261306674"
+        crossorigin="anonymous"></script>
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-format="fluid"
+        data-ad-layout-key="-58+c9+16-1v+dp"
+        data-ad-client="ca-pub-7950959261306674"
+        data-ad-slot="9385621847"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 
     <footer class="footer">
         <div class="social-icons">
             <a href="https://www.facebook.com/profile.php?id=100095069508731" target="_blank" class="social-icon"><img src="/images/facebookbranco.png" alt="Facebook"></a>
-				<a href="https://www.instagram.com/revistas_online_/" target="_blank" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
+            <a href="https://www.instagram.com/revistas_online_/" target="_blank" class="social-icon"><img src="/images/instagrambranco.png" alt="Instagram"></a>
             <a href="mailto:revistasonline@sapo.pt" class="social-icon"><img src="/images/emailbranco.png" alt="Email"></a>
         </div>
     </footer>
+
+    <div class="search-container">
+        <input type="text" id="search-input" placeholder="Pesquisar...">
+        <button onclick="searchArticles()">Buscar</button>
+    </div>
+
+    <script>
+        function searchArticles() {
+            // Obtém o valor digitado pelo usuário no campo de busca
+            var searchText = document.getElementById("search-input").value.toLowerCase();
+
+            // Obtém todas as reportagens
+            var articles = document.getElementsByClassName("article-educacao");
+
+            // Percorre as reportagens e verifica se o título ou conteúdo contêm o texto de busca
+            for (var i = 0; i < articles.length; i++) {
+                var article = articles[i];
+                var title = article.querySelector(".article-title").textContent.toLowerCase();
+                var content = article.querySelector(".article-content").textContent.toLowerCase();
+
+                // Verifica se o texto de busca está no título ou no conteúdo
+                if (title.includes(searchText) || content.includes(searchText)) {
+                    article.style.display = "block"; // Mostra a reportagem
+                } else {
+                    article.style.display = "none"; // Oculta a reportagem
+                }
+            }
+        }
+    </script>
+</body>
+
+</html>
