--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 		  <div class="manu_area">
 			<div class="mainmenu menu-wrap wrap">
 			  <ul id="nav-bottom" class="button_area">
-				<li><a href="/educacao.html">Educação</a></li>
-				<li><a href="/saude.html">Saúde</a></li>
-				<li><a href="/tecnologia.html">Tecnologia</a></li>
+                <li><a href="/educacao.html"><img src="/images/BotãoEducação.png" alt="Educação"></a></li>
+                <li><a href="/saude.html"><img src="/images/BotãoSaúde.png" alt="Saúde"></a></li>
+                <li><a href="/tecnologia.html"><img src="/images/BotãoTecnologia.png" alt="Tecnologia"></a></li>
 			  </ul>
 			</div>
 		  </div>
